# CCC

./: .gitattributes  .gitignore  AGENTS.md  README.md  codexconvo.md  pyproject.toml
.obsidian/: workspace.json
collisionrelateddocs/Instructions/: OAK 04.DOC
collisionrelateddocs/Settings Backup/: app_settings.json
docs/: codex-session-18-07.md  codex-session-20-28.md  docs_index.md  glossary.md  repo_map.json  roadmap.md  source_manifest.csv  source_manifest.json  source_manifest.md
docs/architecture/: future_system_convergence.md  governance_security.md  mvp_interlock.md  overview.md  parser_ui_cli.md  programme_architecture.md  tooling.md
docs/contracts/: eva_export_contract.md  eva_export_contract_v1.md  evidence_package_contract_v1.md  extraction_adapter_contract_v1.md  parser_result_v1.md  provider_principal_config_contract_v1.md  review_audit_event_contract_v1.md  storage_adapter_contract.md  storage_adapter_contract_v1.md  work_item_contract_v1.md
docs/data/: provider_coverage_matrix.md
docs/decisions/: 0001-parser-first.md  0002-storage-box-first.md  0003-operational-core-mvp.md  0004-ground-up-compatible-parser-rebuild.md  0005-shared-internal-app-local-accounts.md  0006-box-package-before-live-upload.md  0007-deterministic-first-parser.md  0008-private-real-corpus-only.md
docs/integrations/: external_services.md
tests/: test_parser_cli_mvp.py  test_parser_mvp_contracts.py  test_scaffold_contracts.py
tools/: build_parser_fixtures.py  generate_plan_workspaces.py  run_parser_corpus.py  scaffold_initial_repo.py  verify_scaffold.py
(+877 files in other folders)
