[project]
name = "ccc"
version = "0.1.0"
description = "Collision Command Centre parser-first scaffold"
requires-python = ">=3.11"
dependencies = [
    "extract-msg>=0.55.0",
    "jsonschema>=4.0",
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "pillow>=10.0",
    "pymupdf>=1.24",
    "pypdf>=6.0",
    "pytesseract>=0.3",
    "python-dateutil>=2.9",
    "python-docx>=1.2",
    "tkinterdnd2>=0.4",
]

[project.scripts]
ccc-parser = "ccc_parser.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
