[project]
name = "ccc"
version = "0.1.0"
description = "Collision Command Centre parser-first scaffold"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Render/runtime deps for src/skills/vehicle-valuation (PDF render + Autotrader capture).
# Install with: python -m pip install -e .[skills]
skills = [
  "weasyprint>=66,<67",
  "jinja2>=3,<4",
  "pypdf>=6,<7",
  "reportlab>=4,<5",
  "playwright>=1.44,<2",
  "playwright-stealth>=2.0,<3",
]

[project.scripts]
ccc-parser = "ccc_parser.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
